src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>HFM Re-order</fullName>
        <description>HFM Re-order Opportunity</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Final Negotiations</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>SJM Sales Process</fullName>
        <description>SJM Standardized Sales Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Final Negotiations</fullName>
        </values>
        <values>
            <fullName>Handling Objections</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualifying</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AMOUNT__c</fullName>
        <formula>Amount</formula>
        <label>AMOUNT $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASP__c</fullName>
        <inlineHelpText>Price per unit</inlineHelpText>
        <label>ASP</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acquisition_Mode__c</fullName>
        <label>Acquisition Mode</label>
        <picklist>
            <picklistValues>
                <fullName>Capital Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capital Alternative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program (CAP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quantity Purchase</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_VP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Area VP</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Opportunities (Area VP)</relationshipLabel>
        <relationshipName>Opportunities_AreaVP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <formula>CASE( RecordType.DeveloperName , 
&quot;SJM_Capital_Sales&quot;, Account.USD_AF_Area__c, 
&quot;SJM_Service_Plan_Sales&quot;,Account.USD_AF_Area__c, 
&quot;SJM_HFM_New_Opportunity&quot;,Account.USD_HFM_Area__c, 
&quot;SJM_HFM_Re-order_Opportunity&quot;,Account.USD_HFM_Area__c, 
NULL)</formula>
        <label>Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Cycle__c</fullName>
        <label>Budget Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>July to June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oct to Sept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jan thru Dec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Buying_process__c</fullName>
        <label>Buying Process</label>
        <picklist>
            <picklistValues>
                <fullName>Board Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Analysis Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CFO Approval</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CAP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cap_Term_Period__c</fullName>
        <label>Cap Term Period</label>
        <picklist>
            <picklistValues>
                <fullName>Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capital_Cash__c</fullName>
        <label>Capital Cash</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Capital__c</fullName>
        <label>Capital $</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CardioMEMS_Account_Manager__c</fullName>
        <label>CardioMEMS Account Manager</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Product_Evaluated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive Product Evaluated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contracts_Being_Presented__c</fullName>
        <label>Contracts Being Presented?</label>
        <picklist>
            <picklistValues>
                <fullName>Cash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leveraged Deal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rebate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Days_To_Close__c</fullName>
        <formula>CloseDate  -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days To Close</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>CASE( RecordType.DeveloperName , 
&quot;SJM_Capital_Sales&quot;, Account.USD_AF_Division__c, 
&quot;SJM_Service_Plan_Sales&quot;,Account.USD_AF_Division__c, 
&quot;SJM_HFM_New_Opportunity&quot;,Account.USD_HFM_Division__c,
&quot;SJM_HFM_Re-order_Opportunity&quot;,Account.USD_HFM_Division__c,
NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Evaluation_Competitor_Strength__c</fullName>
        <label>Strength?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Evaluation_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evaluation Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Evaluation_Strength__c</fullName>
        <label>Strength?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Ext Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Negotiations_Start_Date__c</fullName>
        <label>Final Negotiations Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Use_Date__c</fullName>
        <label>First Use Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Floor_Ceiling__c</fullName>
        <label>Floor/Ceiling</label>
        <picklist>
            <picklistValues>
                <fullName>Celing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Plane</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HFMReorderProduct__c</fullName>
        <label>Re-order Product</label>
        <picklist>
            <picklistValues>
                <fullName>CM2000: CardioMEMS™ PA Sensor and Delivery System</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CM1000: CardioMEMS™ Patient Electronics System (GSM)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM1010: CardioMEMS™ Patient Electronics System (Land Line)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM3000: CardioMEMS™ Hospital Electronics System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM3040: WiFi Adaptor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM2010: CardioMEMS™ Guidewire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM Assurance Plus: CardioMEMS Assurance Plus Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMRENTALFEE: rental fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CM2000</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>CM2010</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>CardioMEMS Assurance Plus Plan</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HFM_Total__c</fullName>
        <description>HFM Total for ReOrder</description>
        <label>HFM Re-order Amount</label>
        <summarizedField>OpportunityLineItem.HFM_Total__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Handling_Objections_Start_Date__c</fullName>
        <label>Handling_Objections_Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN__c</fullName>
        <formula>TEXT(Account.IDN__c)</formula>
        <inlineHelpText>Integrated Delivery Network (IDN)</inlineHelpText>
        <label>IDN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implant_Date__c</fullName>
        <description>Implant Date for CardioMEMS</description>
        <label>Implant Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installed_Date__c</fullName>
        <label>Installed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Integrated_Lab_Manager__c</fullName>
        <label>Integrated Lab Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Alex Jimenez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brad Campbell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Mann</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tom Bollinger</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Integrated_Lab_or_MediGuide_Only__c</fullName>
        <label>Integrated Lab or MediGuide Only</label>
        <picklist>
            <picklistValues>
                <fullName>Integrated Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MediGuide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lab_Number__c</fullName>
        <label>Lab Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Updated_By_Profile__c</fullName>
        <formula>LastModifiedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Updated By Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Oppty_ID__c</fullName>
        <description>Created to migrate the Inside sales legacy Opportunities</description>
        <externalId>true</externalId>
        <label>Legacy Oppty ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_Source__c</fullName>
        <label>Legacy Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level_of_Approval_Needed__c</fullName>
        <label>Level of Approval Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Departmental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Value Analysis Committee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Board level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Board</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Leveraged_Deal__c</fullName>
        <label>Strength?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Board_Meeting_Date__c</fullName>
        <label>Next Board Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_VAC_Meeting_Date__c</fullName>
        <label>Next VAC Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Objection_Details__c</fullName>
        <label>Objection Details</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Evidence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Evidence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Engagement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Blunting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>On_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityOne__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpportunityOne</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Sub_Type__c</fullName>
        <description>IL - Opportunity Subtype</description>
        <label>Opportunity Sub Type</label>
        <picklist>
            <picklistValues>
                <fullName>MediGuide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VantageView</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large IDN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Lab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workmate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EnSite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ViewMate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Networking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Owner_of_Next_Steps__c</fullName>
        <inlineHelpText>Who is responsible for next steps?</inlineHelpText>
        <label>Owner of Next Steps</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_of_Next_Steps_lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner of Next Steps</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Physician_Employed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Physician Employed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Physician_Name_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physician Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Physician_Name__c</fullName>
        <description>Implanting Physician</description>
        <label>Physician Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physician_Strength__c</fullName>
        <label>Strength?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Primary_GPO_Affiliation__c</fullName>
        <formula>TEXT(Account.Primary_GPO_Affiliation__c)</formula>
        <inlineHelpText>Primary GPO Affiliation</inlineHelpText>
        <label>Primary GPO Affiliation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PriorityIS__c</fullName>
        <description>Inside Sales</description>
        <inlineHelpText>Priority</inlineHelpText>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>IF(Days_To_Close__c &gt;15,

IMAGE( &quot;/img/samples/flag_green.gif&quot;,&quot;Greater Than 15 Days&quot;),

IF(Days_To_Close__c &gt;7,

IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;8-15 Days&quot;),

IMAGE( &quot;/img/samples/flag_red.gif&quot;,&quot;Less than 7 Days&quot;) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Account</label>
        <referenceTo>Product_Account__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products_To_Quote__c</fullName>
        <inlineHelpText>Select the product(s) to quote</inlineHelpText>
        <label>Products To Quote</label>
        <picklist>
            <picklistValues>
                <fullName>PA Sensor and Delivery System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Electronics System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Patient Electronics System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EnSite Velocity System New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EnSite Velocity System Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - Precision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - Verismo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - Derexi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - Courier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - Contact Force Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EnSite - Warranty Assurance Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EnSite - Warranty Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WorkMate Claris - 120 System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WorkMate Claris - 56 System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WorkMate Claris - Upgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EP-4 Cardiac Stimulator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - Unity HL7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - Unity Review Modules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - Unity DICOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - ImageSync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software - Scribe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WorkMate - Warranty Assurance Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WorkMate - Warranty Basic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ViewMate System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ViewMate - Warranty Assurance Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ampere RF Generator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cool Point Irrigation Pump</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VantageView 16 inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VantageView 12 inputs</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Projected_Duration_To_Purchase__c</fullName>
        <inlineHelpText>Projected Days to close Opportunity.</inlineHelpText>
        <label>Projected Duration To Purchase</label>
        <picklist>
            <picklistValues>
                <fullName>0-30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-90 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-180 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0-360 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Terms__c</fullName>
        <label>Proposal Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Proposing_a_Leveraged_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proposing a Leveraged Deal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prospecting_Start_Date__c</fullName>
        <label>Prospecting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Qualifying_Start_Date__c</fullName>
        <label>Qualifying Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quoted__c</fullName>
        <label>Quoted</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RSD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Regional Sales Director</inlineHelpText>
        <label>RSD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities_RSD</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reason_Lost_Desc__c</fullName>
        <inlineHelpText>Explain the Reason why the Opportunity was lost</inlineHelpText>
        <label>Reason Lost Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reason_Lost__c</fullName>
        <label>Reason Lost</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Loss in funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Loss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Programs offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-house BioMed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3rd party services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budget/Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital policy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planned upgrade/EOL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>CASE( RecordType.DeveloperName , 
&quot;SJM_Capital_Sales&quot;, Account.USD_AF_Region__c, 
&quot;SJM_Service_Plan_Sales&quot;,Account.USD_AF_Region__c, 
&quot;SJM_HFM_New_Opportunity&quot;,Account.USD_HFM_Region__c,
&quot;SJM_HFM_Re-order_Opportunity&quot;,Account.USD_HFM_Region__c,
NULL)</formula>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SJM_Divisions_Involved__c</fullName>
        <label>St. Jude Medical Products Involved</label>
        <picklist>
            <picklistValues>
                <fullName>EP Disposable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Heart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vascular</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SJM_Resources_Needed__c</fullName>
        <label>SJM Resources Needed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep</label>
        <referenceTo>Employee__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Contract_Specialist__c</fullName>
        <description>Service Contract Specialist Name</description>
        <formula>Account.Service_Contract_Specialist__r.FirstName &amp; &quot; &quot; &amp; Account.Service_Contract_Specialist__r.LastName</formula>
        <inlineHelpText>Service Contract Specialist Name</inlineHelpText>
        <label>Service Contract Specialist</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status</description>
        <inlineHelpText>Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>With Inside Sales</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>With Field Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>With Enterprise Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Customer Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Under Contracts Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Strategic_Account__c</fullName>
        <formula>Text(Account.Strategic_Account__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Strategic Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_ID__c</fullName>
        <label>System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_of_Cap__c</fullName>
        <label>Term of Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term_of_Contract__c</fullName>
        <label>Term of Contract(Quarters)</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Revenue__c</fullName>
        <formula>Capital__c + (ASP__c * Units__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Capital $ + (ASP * Quantity)</inlineHelpText>
        <label>Total Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Units__c</fullName>
        <description>Sum of Product Quantities.</description>
        <inlineHelpText>Sum of Product Quantities entered as the Product Line Items.</inlineHelpText>
        <label>Total Units</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_value_of_CAP__c</fullName>
        <label>Total value of CAP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <inlineHelpText># of units</inlineHelpText>
        <label>Units</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>